Fix kube favorites not showing and sizing issue

--- a/src/frontend/packages/core/src/features/home/home/home-page.component.scss
+++ b/src/frontend/packages/core/src/features/home/home/home-page.component.scss
@@ -1,7 +1,12 @@
+:host {
+  display: flex;
+}
+
 .home-page {
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
   &__header {
     margin-top: 0;
   }
